Fixed bug not showing messages + intro message

--- a/7cc005-portfolio/src/Game.css
+++ b/7cc005-portfolio/src/Game.css
@@ -4,6 +4,7 @@
 
 .game-messageLog {
     min-height: 20em;
+    align-self: flex-start;
 }
 
 .game-characterDetails {
